--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
+
 body {
-  font-family: 'Arial', sans-serif;
+  font-family: 'Jua', sans-serif;
   background-color: #111;
   color: #000;
   padding: 40px;
