--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
+@import url('https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSans.css');
 
 body {
-  font-family: 'Jua', sans-serif;
+  font-family: 'GmarketSans', sans-serif;
   background-color: #111;
   color: #000;
   padding: 40px;
