--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
-@import url('https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSans.css');
-
 body {
-  font-family: 'GmarketSans', sans-serif;
+  font-family: 'Malgun Gothic', sans-serif;
   background-color: #111;
   color: #000;
   padding: 40px;
