--- a/style.css
+++ b/style.css
@@ -38,6 +38,9 @@ ul.song-list li {
 
 input[type="checkbox"] {
   margin-right: 10px;
+  width: 20px;
+  height: 20px;
+  flex-shrink: 0;
 }
 
 a {
@@ -72,6 +75,16 @@ button:hover {
   margin-top: 20px;
   font-weight: bold;
   color: #81c784;
+}
+
+ul.song-list li label {
+  display: inline-flex;
+  align-items: flex-start;
+  gap: 10px;
+  line-height: 1.4;
+  word-break: break-word;
+  white-space: normal;
+  flex-wrap: nowrap;
 }
 
 ul.song-list li label {
